fix: hide scrollbar AB#35

--- a/src/LoanHub.Search.Web/src/index.css
+++ b/src/LoanHub.Search.Web/src/index.css
@@ -86,6 +86,24 @@ body {
   color: var(--color-text-primary);
 }
 
+html,
+body {
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+}
+
+html::-webkit-scrollbar,
+body::-webkit-scrollbar,
+*::-webkit-scrollbar {
+  width: 0;
+  height: 0;
+}
+
+* {
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+}
+
 h1, h2, h3, h4, h5, h6 {
   line-height: 1.2;
 }
